[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-providers-gun"
version = "0.6.4"
authors = [
    {name = "Solomatov Sergei", email = "Solomatov.SI@gmail.com"},
]
maintainers = [
    {name = "Solomatov Sergei", email = "Solomatov.SI@gmail.com"},
]
description = "Provider package for Apache Airflow"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["airflow-provider", "gun", "airflow"]
license = {text = "mit"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "kerberos>=1.3.1",
    "psycopg2>=2.9",
    "clickhouse_driver>=0.2.6",
]

[project.urls]
"Source Code" = "https://github.com/solomatovs/gun.git"
"Documentation" = "https://github.com/solomatovs/gun.git/README.md"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.gun.get_provider_info:get_provider_info"
